--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--define Custom View attributes-->
     <declare-styleable name="CircleMeter">
         <attr name="radius" format="dimension" />
         <attr name="value" format="integer" />
